--- a/skin/frontend/default/modern/css/ie7minus.css
+++ b/skin/frontend/default/modern/css/ie7minus.css
@@ -21,3 +21,7 @@
 /* Show menu */
 #nav li.over ul.shown-sub { left:-1px; }
 #nav li.over li ul.shown-sub { left:100px; }
+
+/* Hover fix */
+#nav iframe,
+.truncated iframe { position:absolute; left:-1px; top:0; z-index:-1; background:transparent; filter:progid:DXImageTransform.Microsoft.Alpha(style=0,opacity=0); }
