--- a/skin/frontend/default/modern/css/reset.css
+++ b/skin/frontend/default/modern/css/reset.css
@@ -57,7 +57,7 @@ button      { vertical-align:middle; }
 
 /* Lists */
 dt          { display:block; font-weight:bold; }
-li          { list-style:none; }
+ul,ol       { list-style:none; }
 
 /* Size */
 small       { font-size:.85em; }
